--- a/index.ipynb
+++ b/index.ipynb
@@ -69,9 +69,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "estimated revenue",
+         "text": [],
+         "type": "scatter",
+         "uid": "020c3db2-316d-11e9-8ed3-135e7cb80d01",
+         "x": [
+          0,
+          150
+         ],
+         "y": [
+          0,
+          450
+         ]
+        }
+       ],
+       "layout": {
+        "title": "Movie Spending and Revenue (in millions)"
+       }
+      },
+      "text/html": [
+       "<div id=\"7d41aee1-cdde-4bb4-ae6e-cd0ed930fbbd\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7d41aee1-cdde-4bb4-ae6e-cd0ed930fbbd\", [{\"mode\": \"lines\", \"name\": \"estimated revenue\", \"text\": [], \"x\": [0, 150], \"y\": [0, 450], \"type\": \"scatter\", \"uid\": \"022f4d20-316d-11e9-8ed3-135e7cb80d01\"}], {\"title\": \"Movie Spending and Revenue (in millions)\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"7d41aee1-cdde-4bb4-ae6e-cd0ed930fbbd\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7d41aee1-cdde-4bb4-ae6e-cd0ed930fbbd\", [{\"mode\": \"lines\", \"name\": \"estimated revenue\", \"text\": [], \"x\": [0, 150], \"y\": [0, 450], \"type\": \"scatter\", \"uid\": \"022f4d20-316d-11e9-8ed3-135e7cb80d01\"}], {\"title\": \"Movie Spending and Revenue (in millions)\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from lib.graph import trace_values, plot, layout\n",
     "\n",
@@ -117,9 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def y(x):\n",
     "    return x\n",
@@ -129,9 +187,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10000000"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y(10000000)"
    ]
@@ -176,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,18 +255,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90000000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y(30000000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y(0)"
    ]
@@ -271,9 +362,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "increased est. revenue",
+         "text": [],
+         "type": "scatter",
+         "uid": "6ca0ffd0-316f-11e9-8ed3-135e7cb80d01",
+         "x": [
+          0,
+          150
+         ],
+         "y": [
+          50,
+          500
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "estimated revenue",
+         "text": [],
+         "type": "scatter",
+         "uid": "6ca1021e-316f-11e9-8ed3-135e7cb80d01",
+         "x": [
+          0,
+          150
+         ],
+         "y": [
+          0,
+          450
+         ]
+        }
+       ],
+       "layout": {
+        "title": "Movie Spending and Revenue (in millions)"
+       }
+      },
+      "text/html": [
+       "<div id=\"cd47737a-82a8-4466-a0bc-ecae41d0e69a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cd47737a-82a8-4466-a0bc-ecae41d0e69a\", [{\"mode\": \"lines\", \"name\": \"increased est. revenue\", \"text\": [], \"x\": [0, 150], \"y\": [50, 500], \"type\": \"scatter\", \"uid\": \"6ca68900-316f-11e9-8ed3-135e7cb80d01\"}, {\"mode\": \"lines\", \"name\": \"estimated revenue\", \"text\": [], \"x\": [0, 150], \"y\": [0, 450], \"type\": \"scatter\", \"uid\": \"6ca68b26-316f-11e9-8ed3-135e7cb80d01\"}], {\"title\": \"Movie Spending and Revenue (in millions)\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"cd47737a-82a8-4466-a0bc-ecae41d0e69a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cd47737a-82a8-4466-a0bc-ecae41d0e69a\", [{\"mode\": \"lines\", \"name\": \"increased est. revenue\", \"text\": [], \"x\": [0, 150], \"y\": [50, 500], \"type\": \"scatter\", \"uid\": \"6ca68900-316f-11e9-8ed3-135e7cb80d01\"}, {\"mode\": \"lines\", \"name\": \"estimated revenue\", \"text\": [], \"x\": [0, 150], \"y\": [0, 450], \"type\": \"scatter\", \"uid\": \"6ca68b26-316f-11e9-8ed3-135e7cb80d01\"}], {\"title\": \"Movie Spending and Revenue (in millions)\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "regression_trace_increased = trace_values([0, 150], [50, 500], mode = 'lines', name = 'increased est. revenue')\n",
     "plot([regression_trace_increased, regression_trace], movie_layout)"
@@ -395,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
